exports[`Stepper should map props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 1
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0
        }
      } />
  </View>
  <View
    onLayout={[Function bound _onLayout]}
    style={
      Array [
        Object {
          "flex": 1
        },
        undefined
      ]
    }>
    <View
      style={
        Object {
          "flex": 1
        }
      }>
      <View
        style={
          Object {
            "flex": 1
          }
        }>
        <View
          onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
          onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
          onResponderEnd={[Function onResponderEnd]}
          onResponderGrant={[Function onResponderGrant]}
          onResponderMove={[Function onResponderMove]}
          onResponderReject={[Function onResponderReject]}
          onResponderRelease={[Function onResponderRelease]}
          onResponderStart={[Function onResponderStart]}
          onResponderTerminate={[Function onResponderTerminate]}
          onResponderTerminationRequest={[Function onResponderTerminationRequest]}
          onStartShouldSetResponder={[Function onStartShouldSetResponder]}
          onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
          pointerEvents="none"
          style={
            Object {
              "backgroundColor": "#E9E9EF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 0,
                "width": 0
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": 1000000
                },
                Object {
                  "translateY": 1000000
                }
              ]
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1
                },
                undefined
              ]
            }>
            <Text>
              Step 2
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
          onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
          onResponderEnd={[Function onResponderEnd]}
          onResponderGrant={[Function onResponderGrant]}
          onResponderMove={[Function onResponderMove]}
          onResponderReject={[Function onResponderReject]}
          onResponderRelease={[Function onResponderRelease]}
          onResponderStart={[Function onResponderStart]}
          onResponderTerminate={[Function onResponderTerminate]}
          onResponderTerminationRequest={[Function onResponderTerminationRequest]}
          onStartShouldSetResponder={[Function onStartShouldSetResponder]}
          onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#E9E9EF",
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 0,
                "width": 0
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": 0
                },
                Object {
                  "translateY": 0
                }
              ]
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1
                },
                undefined
              ]
            }>
            <Text>
              Step 2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Stepper should toggle the rendering of the progressBar 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    onLayout={[Function bound _onLayout]}
    style={
      Array [
        Object {
          "flex": 1
        },
        undefined
      ]
    }>
    <View
      style={
        Object {
          "flex": 1
        }
      }>
      <View
        style={
          Object {
            "flex": 1
          }
        }>
        <View
          onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
          onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
          onResponderEnd={[Function onResponderEnd]}
          onResponderGrant={[Function onResponderGrant]}
          onResponderMove={[Function onResponderMove]}
          onResponderReject={[Function onResponderReject]}
          onResponderRelease={[Function onResponderRelease]}
          onResponderStart={[Function onResponderStart]}
          onResponderTerminate={[Function onResponderTerminate]}
          onResponderTerminationRequest={[Function onResponderTerminationRequest]}
          onStartShouldSetResponder={[Function onStartShouldSetResponder]}
          onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
          pointerEvents="none"
          style={
            Object {
              "backgroundColor": "#E9E9EF",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 0,
                "width": 0
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": 1000000
                },
                Object {
                  "translateY": 1000000
                }
              ]
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1
                },
                undefined
              ]
            }>
            <Text>
              Step 2
            </Text>
          </View>
        </View>
        <View
          onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
          onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
          onResponderEnd={[Function onResponderEnd]}
          onResponderGrant={[Function onResponderGrant]}
          onResponderMove={[Function onResponderMove]}
          onResponderReject={[Function onResponderReject]}
          onResponderRelease={[Function onResponderRelease]}
          onResponderStart={[Function onResponderStart]}
          onResponderTerminate={[Function onResponderTerminate]}
          onResponderTerminationRequest={[Function onResponderTerminationRequest]}
          onStartShouldSetResponder={[Function onStartShouldSetResponder]}
          onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#E9E9EF",
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 0,
                "width": 0
              },
              "shadowOpacity": 0.4,
              "shadowRadius": 10,
              "top": 0,
              "transform": Array [
                Object {
                  "translateX": 0
                },
                Object {
                  "translateY": 0
                }
              ]
            }
          }>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "flex": 1
                },
                undefined
              ]
            }>
            <Text>
              Step 2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
